# target-intacct

./: .gitignore  README.md  sample_config.json  setup.cfg
src/target_intacct/: __init__.py  client.py  const.py  exceptions.py  hours_per_week_denominator.py  payroll_journal.py  statistical_journal.py  utils.py
