[metadata]
name = target-intacct
version = 0.0.3
description = hotglue target for posting data to the Intacct API.
long_description = file: README.md
long_description_content_type = text/markdown
author = hotglue
url = https://github.com/hotgluexyz/target-intacct
license = GNU Affero General Public v3
keywords = intacct, singer, stitch, ETL
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
py_modules = target_intacct
include_package_data = true
zip_safe = False

python_requires = >=3.7
install_requires =
    pandas==1.1.3
    singer-python>=5.0.12
    requests>=2.20.0
    xmltodict==0.12.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    target-intacct = target_intacct:main

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_singer = singer
known_first_party =
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,SINGER,FIRSTPARTY,LOCALFOLDER
